--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -1,7 +1,7 @@
 .landing-page {
   text-align: left;
   height: 100vh;
-
+  background-color: rgba(30, 30, 30, 255);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -146,7 +146,7 @@ span {
   font-weight: 300;
   opacity: 0;
   /* transform: translateY(3rem); */
-  animation: fadeInUp 3s ease 5s forwards;
+  animation: fadeInUp 3s ease 3.5s forwards;
 }
 
 @keyframes fadeInUp {
@@ -196,4 +196,81 @@ span {
   height: 2px;
   bottom: 8px;
   background: currentColor;
+}
+
+@media screen and (max-width: 600px) {
+  span {
+    font-size: 23px;
+  }
+  .Typewriter__cursor {
+    font-size: 23px;
+    font-weight: 500;
+  }
+  .code {
+    margin-left: 15px;
+  }
+  .aboutButton {
+    font-size: 20px;
+    padding: 15px 45px;
+    margin-left: 15px;
+  }
+  .gg-arrow-right-o {
+    transform: scale(var(--ggs, 1));
+    border-radius: 20px;
+    transition: all 0.4s ease;
+    margin-left: 10px;
+    top: 3px;
+  }
+
+  .aboutButton:hover i {
+    transform: rotateZ(90deg) scale(var(--ggs, 1));
+  }
+  .subtitle {
+    animation: fadeInUp 3s ease 3.5s forwards;
+  }
+}
+@media screen and (min-width: 760px) {
+  span {
+    font-size: 32px;
+  }
+  .Typewriter__cursor {
+    font-size: 32px;
+    font-weight: 500;
+  }
+  .subtitle {
+    animation: fadeInUp 3s ease 4.5s forwards;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  span {
+    font-size: 40px;
+  }
+  .Typewriter__cursor {
+    font-size: 32px;
+    font-weight: 500;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  span {
+    font-size: 30px;
+  }
+  .Typewriter__cursor {
+    font-size: 30px;
+    font-weight: 500;
+  }
+  .subtitle {
+    animation: fadeInUp 3s ease 7s forwards;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  span {
+    font-size: 38px;
+  }
+  .Typewriter__cursor {
+    font-size: 38px;
+    font-weight: 500;
+  }
 }
