--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -7,13 +7,12 @@
   font-family: Helvetica;
   font-weight: 300;
   border-bottom: 5px solid rgba(58, 195, 252, 255);
-  height: 80px;
-  font-size: 30px;
+  height: 60px;
+  font-size: 15px;
 }
-
 .navbar__item {
-  margin-left: 40px;
-  padding: 16px 16px;
+  margin: 0;
+  padding: 16px 7px;
   cursor: pointer;
   vertical-align: middle;
   transition: all 0.2s linear;
@@ -42,4 +41,45 @@
 }
 .active-tab {
   color: rgba(58, 195, 252, 255);
+}
+
+@media screen and (min-width: 300px) {
+}
+
+@media screen and (min-width: 600px) {
+}
+@media screen and (min-width: 800px) {
+  .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: rgba(30, 30, 30, 255);
+    color: white;
+    font-family: Helvetica;
+    font-weight: 300;
+    border-bottom: 5px solid rgba(58, 195, 252, 255);
+    height: 80px;
+    font-size: 30px;
+  }
+
+  .navbar__item {
+    margin-left: 40px;
+    padding: 16px 16px;
+    cursor: pointer;
+    vertical-align: middle;
+    transition: all 0.2s linear;
+    color: aliceblue;
+  }
+  .active-tab {
+    color: rgba(58, 195, 252, 255);
+  }
+}
+
+@media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 1200px) {
+}
+
+@media screen and (min-width: 1500px) {
 }
